Fixed stats card width on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,13 +85,20 @@ body {
     border: 1px solid #262626;
 }
 
-
-@media only screen and (max-width: 700px) {
-  .goal-line {
-    width: 350px;
-  }
-}
-
 .text-green {
     color: #02E651;
+}
+
+.stats-card {
+    width: 300px;
+}
+
+@media only screen and (max-width: 700px) {
+    .goal-line {
+        width: 350px;
+    }
+
+    .stats-card {
+        width: 280px;
+    }
 }
